k8s/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: age-calc
  namespace: age-calc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: age-calc
  template:
    metadata:
      labels:
        app: age-calc
    spec:
      containers:
      - name: age-calc
        image: robert1oo/age-calc:latest
        ports:
        - containerPort: 5000
