k8s/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: age-calc-service
  namespace: age-calc
spec:
  selector:
    app: age-calc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
